fix workspace location, Remove extra logging, Update README.md